Bug 588298 - During mochitest-5 SSL mixedcontent tests, we spam tons of ###!!! ASSERTION: QueryInterface needed, fixed QI, r=kaie, a=blocking-final